samples/_failures_safe/1761599993_28d75c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8fb70210.c: In function ‘main’:
./samples/SAFE/__tmp_8fb70210.c:198:9: error: expected declaration or statement at end of input
  198 |         fprintf(stderr, "Too many tokens\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_8fb70210.c:198:9: error: expected declaration or statement at end of input
